cleanup reverted separate native libs